# C-homework

./: README.md
hw1/: hw1.cpp
hw2/: safe_c_array_t.cpp  safe_long_long_t.cpp
hw3/: hw3.cpp  hw3.h  main.cpp
hw4/: CMakeLists.txt  main.cpp
hw4/game/: CMakeLists.txt  game.cpp  game.h  structures.h
hw4/strategies/: CMakeLists.txt  computer_interface.cpp  computer_interface.h  computer_strategy_1.cpp  computer_strategy_1.h  computer_strategy_2.cpp  computer_strategy_2.h  human.cpp  human.h  interface.h
